// Copyright (c) Shubham Mishra. All rights reserved.
// Licensed under the MIT License.

syntax = "proto3";

package proto.execution;

enum ProtoTransactionOpType {
    // For KV store style operations
    NOOP = 0;
    READ = 1;
    WRITE = 2;

    // For counter style operations
    INCREMENT = 3;
    CAS = 4;
    // DECREMENT = 4; <-- For decrement send, INCREMENT with negative value
    CHECKED_DECREMENT = 5;

    // For reconfiguration
    ADD_LEARNER = 6;
    UPGRADE_FULL_NODE = 7;
    DEL_LEARNER = 8;
    DOWNGRADE_FULL_NODE = 9;

    // For SQL and other operations
    CUSTOM = 10;
    STORED_PROCEDURE1 = 11;
    STORED_PROCEDURE2 = 12;

    // To check for byz commit
    PROBE = 13;

    // To Block on VectorClock
    BLOCK_ON_VC = 14;
    BLOCK_INDEFINITELY = 15;
    UNBLOCK = 16;

}

message ProtoTransactionOp {
    ProtoTransactionOpType op_type = 1;
    repeated bytes operands = 2;
}

message ProtoTransactionPhase {
    repeated ProtoTransactionOp ops = 1;
}

message ProtoTransaction {
    ProtoTransactionPhase on_receive = 1;
    ProtoTransactionPhase on_crash_commit = 2;
    ProtoTransactionPhase on_byzantine_commit = 3;
    bool is_reconfiguration = 4;
    bool is_2pc = 5;
}

message ProtoTransactionOpResult {
    bool success = 1;
    repeated bytes values = 2;
}

message ProtoTransactionResult {
    repeated ProtoTransactionOpResult result = 1;
}